# fesh

./: .gitignore  Cargo.toml  README.md  README.org  config.toml
src/: config.rs  config_parser.rs  fesh.rs  file_writer.rs  history_writer.rs  input_parser.rs  input_reader.rs  logger.rs  main.rs  mode.rs  prompt.rs  util.rs
src/command/: command.rs  command_error.rs  command_list.rs  command_type.rs  mod.rs  operator.rs
test-files/: basic-pipe.bash  echo.fesh
