[package]
name = "fesh"
version = "1.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
git2 = "0.20.2"
rustyline = { version = "17.0.2", features = ["derive", "rustyline-derive", "with-fuzzy"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
